// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should allow to enable legacy decorator 1`] = `
{
  "plugins": [
    [
      "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-decorators/lib/index.js",
      {
        "version": "legacy",
      },
    ],
    "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-export-default-from/lib/index.js",
    "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-partial-application/lib/index.js",
    [
      "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-pipeline-operator/lib/index.js",
      {
        "proposal": "minimal",
      },
    ],
    [
      "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-transform-runtime/lib/index.js",
      {
        "useESModules": true,
        "version": "7.24.5",
      },
    ],
    "<ROOT>/packages/compat/babel-preset/src/pluginLockCorejsVersion",
  ],
  "presets": [
    [
      "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-env/lib/index.js",
      {
        "bugfixes": true,
        "corejs": undefined,
        "exclude": [
          "transform-typeof-symbol",
        ],
        "include": [
          "@babel/plugin-transform-class-properties",
        ],
        "modules": "commonjs",
        "targets": [
          "Chrome >= 53",
        ],
        "useBuiltIns": false,
      },
    ],
    [
      "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
      {
        "allExtensions": true,
        "allowDeclareFields": true,
        "allowNamespaces": true,
        "isTSX": true,
        "optimizeConstEnums": true,
      },
    ],
  ],
}
`;

exports[`should allow to enable specific version decorator 1`] = `
{
  "plugins": [
    [
      "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-decorators/lib/index.js",
      {
        "decoratorsBeforeExport": true,
        "version": "2018-09",
      },
    ],
    "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-export-default-from/lib/index.js",
    "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-partial-application/lib/index.js",
    [
      "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-pipeline-operator/lib/index.js",
      {
        "proposal": "minimal",
      },
    ],
    [
      "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-transform-runtime/lib/index.js",
      {
        "useESModules": true,
        "version": "7.24.5",
      },
    ],
    "<ROOT>/packages/compat/babel-preset/src/pluginLockCorejsVersion",
  ],
  "presets": [
    [
      "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-env/lib/index.js",
      {
        "bugfixes": true,
        "corejs": undefined,
        "exclude": [
          "transform-typeof-symbol",
        ],
        "modules": "commonjs",
        "targets": [
          "Chrome >= 53",
        ],
        "useBuiltIns": false,
      },
    ],
    [
      "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
      {
        "allExtensions": true,
        "allowDeclareFields": true,
        "allowNamespaces": true,
        "isTSX": true,
        "optimizeConstEnums": true,
      },
    ],
  ],
}
`;

exports[`should provide web preset as expected 1`] = `
{
  "plugins": [
    "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-export-default-from/lib/index.js",
    "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-partial-application/lib/index.js",
    [
      "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-pipeline-operator/lib/index.js",
      {
        "proposal": "minimal",
      },
    ],
    [
      "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-transform-runtime/lib/index.js",
      {
        "useESModules": true,
        "version": "7.24.5",
      },
    ],
    "<ROOT>/packages/compat/babel-preset/src/pluginLockCorejsVersion",
  ],
  "presets": [
    [
      "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-env/lib/index.js",
      {
        "bugfixes": true,
        "corejs": undefined,
        "exclude": [
          "transform-typeof-symbol",
        ],
        "modules": "commonjs",
        "targets": [
          "Chrome >= 53",
        ],
        "useBuiltIns": false,
      },
    ],
    [
      "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
      {
        "allExtensions": true,
        "allowDeclareFields": true,
        "allowNamespaces": true,
        "isTSX": true,
        "optimizeConstEnums": true,
      },
    ],
  ],
}
`;

exports[`should provide web preset as expected when presetEnv is empty object 1`] = `
[
  [
    "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-env/lib/index.js",
    {
      "bugfixes": true,
      "corejs": undefined,
      "exclude": [
        "transform-typeof-symbol",
      ],
      "modules": "commonjs",
    },
  ],
  [
    "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
    {
      "allExtensions": true,
      "allowDeclareFields": true,
      "allowNamespaces": true,
      "isTSX": true,
      "optimizeConstEnums": true,
    },
  ],
]
`;

exports[`should provide web preset as expected when presetEnv is false 1`] = `
[
  [
    "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
    {
      "allExtensions": true,
      "allowDeclareFields": true,
      "allowNamespaces": true,
      "isTSX": true,
      "optimizeConstEnums": true,
    },
  ],
]
`;

exports[`should support inject core-js polyfills by entry 1`] = `
{
  "plugins": [
    "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-export-default-from/lib/index.js",
    "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-partial-application/lib/index.js",
    [
      "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-pipeline-operator/lib/index.js",
      {
        "proposal": "minimal",
      },
    ],
    [
      "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-transform-runtime/lib/index.js",
      {
        "useESModules": true,
        "version": "7.24.5",
      },
    ],
    "<ROOT>/packages/compat/babel-preset/src/pluginLockCorejsVersion",
  ],
  "presets": [
    [
      "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-env/lib/index.js",
      {
        "bugfixes": true,
        "corejs": {
          "proposals": true,
          "version": "3.36",
        },
        "exclude": [
          "transform-typeof-symbol",
        ],
        "modules": "commonjs",
        "targets": [
          "Chrome >= 53",
        ],
        "useBuiltIns": "entry",
      },
    ],
    [
      "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
      {
        "allExtensions": true,
        "allowDeclareFields": true,
        "allowNamespaces": true,
        "isTSX": true,
        "optimizeConstEnums": true,
      },
    ],
  ],
}
`;

exports[`should support inject core-js polyfills by usage 1`] = `
{
  "plugins": [
    "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-export-default-from/lib/index.js",
    "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-partial-application/lib/index.js",
    [
      "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-pipeline-operator/lib/index.js",
      {
        "proposal": "minimal",
      },
    ],
    [
      "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-transform-runtime/lib/index.js",
      {
        "useESModules": true,
        "version": "7.24.5",
      },
    ],
    "<ROOT>/packages/compat/babel-preset/src/pluginLockCorejsVersion",
  ],
  "presets": [
    [
      "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-env/lib/index.js",
      {
        "bugfixes": true,
        "corejs": {
          "proposals": true,
          "version": "3.36",
        },
        "exclude": [
          "transform-typeof-symbol",
        ],
        "modules": "commonjs",
        "targets": [
          "Chrome >= 53",
        ],
        "useBuiltIns": "usage",
      },
    ],
    [
      "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
      {
        "allExtensions": true,
        "allowDeclareFields": true,
        "allowNamespaces": true,
        "isTSX": true,
        "optimizeConstEnums": true,
      },
    ],
  ],
}
`;
